--- a/src/Components/HomeComponents/home.css
+++ b/src/Components/HomeComponents/home.css
@@ -132,7 +132,7 @@ footer > a {
   text-align: left;
   padding: 2%;
 }
-.avocata > .content > img {
+.avocata > .content > .media {
   width: 100%;
 }
 
